--- a/composer.json
+++ b/composer.json
@@ -15,19 +15,24 @@
         "source": "https://github.com/jasny/phpunit-extension"
     },
     "require": {
-        "php": ">=7.1.0"
+        "php": "~7.1"
     },
     "require-dev": {
-        "jasny/php-code-quality": "^2.3"
+        "phpunit/phpunit": ">= 7.0, < 8.0",
+        "mikey179/vfsStream": "~1.6",
+        "squizlabs/php_codesniffer": "~3.2",
+        "phpstan/phpstan": ">= 0.9.0, < 1.0.0",
+        "phpstan/phpstan-strict-rules": ">= 0.9.0, < 1.0.0",
+        "appzcoder/phpcloc": "^0.0.2"
     },
     "autoload": {
         "psr-4": {
-            "Jasny\\PhpunitExtension\\": "src/"
+            "Jasny\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Jasny\\PhpunitExtension\\Tests\\": "tests/"
+            "Jasny\\Tests\\": "tests/"
         }
     },
     "scripts": {
