--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,10 @@
         "source": "https://github.com/jasny/phpunit-extension"
     },
     "require": {
-        "php": "~7.1"
+        "php": "~7.2"
     },
     "require-dev": {
         "phpunit/phpunit": ">= 7.0, < 9.0",
-        "mikey179/vfsStream": "~1.6",
         "squizlabs/php_codesniffer": "~3.2",
         "phpstan/phpstan": ">= 0.9.0, < 1.0.0",
         "phpstan/phpstan-strict-rules": ">= 0.9.0, < 1.0.0",
@@ -27,22 +26,19 @@
     },
     "autoload": {
         "psr-4": {
-            "Jasny\\": "src/"
+            "Jasny\\PHPUnit\\": "src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Jasny\\Tests\\": "tests/"
+            "Jasny\\PHPUnit\\Tests\\": "tests/"
         }
     },
     "scripts": {
         "test": [
-            "phpunit",
             "phpstan analyse",
+            "phpunit",
             "phpcs -p src"
-        ],
-        "post-create-project-cmd": [
-            "bash init.sh && rm init.sh"
         ]
     },
     "config": {
