--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,10 @@
         "source": "https://github.com/jasny/phpunit-extension"
     },
     "require": {
-        "php": "~7.2"
+        "php": "~7.2",
+        "phpunit/phpunit": ">= 7.0, < 9.0"
     },
     "require-dev": {
-        "phpunit/phpunit": ">= 7.0, < 9.0",
         "squizlabs/php_codesniffer": "~3.2",
         "phpstan/phpstan": ">= 0.9.0, < 1.0.0",
         "phpstan/phpstan-strict-rules": ">= 0.9.0, < 1.0.0",
