--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,13 @@
         "source": "https://github.com/jasny/phpunit-extension"
     },
     "require": {
-        "php": "~7.2",
-        "phpunit/phpunit": ">= 7.0, < 9.0"
+        "php": ">=7.4",
+        "phpunit/phpunit": ">= 8.3, < 10.0"
     },
     "require-dev": {
-        "squizlabs/php_codesniffer": "~3.2",
-        "phpstan/phpstan": ">= 0.9.0, < 1.0.0",
-        "phpstan/phpstan-strict-rules": ">= 0.9.0, < 1.0.0",
-        "appzcoder/phpcloc": "^0.0.2"
+        "squizlabs/php_codesniffer": "^3.5",
+        "phpstan/phpstan": ">= 0.12.0, < 1.0.0",
+        "phpstan/phpstan-strict-rules": ">= 0.9.0, < 1.0.0"
     },
     "autoload": {
         "psr-4": {
