--- a/phpstan.neon
+++ b/phpstan.neon
@@ -2,5 +2,7 @@ parameters:
     level: 4
     paths:
         - src
+    excludes_analyse:
+        - src/Util/DummyCallback.php
 includes:
   	- vendor/phpstan/phpstan-strict-rules/rules.neon
