--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,9 +13,14 @@ jobs:
       fail-fast: false
       matrix:
         include:
+          - php: 7.2
+            composer: '--prefer-lowest'
+            desc: "Lowest versions"
           - php: 7.4
             composer: '--prefer-lowest'
             desc: "Lowest versions"
+          - php: 7.2
+          - php: 7.3
           - php: 7.4
             coverage: '--coverage-clover /tmp/clover.xml'
           - php: 8.0
