--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,35 +13,37 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - php: 7.4
+          - php: 8.1
             composer: '--prefer-lowest'
             desc: "Lowest versions"
-          - php: 7.4
-            coverage: '--coverage-clover /tmp/clover.xml'          
-          - php: 8.0
           - php: 8.1
+          - php: 8.2
+            coverage: '--coverage-clover /tmp/clover.xml'
+          - php: 8.3
     name: PHP ${{ matrix.php }} ${{ matrix.desc }}
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
-    - name: Setup PHP
-      uses: shivammathur/setup-php@v2
-      with:
-        php-version: ${{ matrix.php }}
-        coverage: xdebug
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: ${{ matrix.php }}
+          coverage: xdebug
 
-    - name: Validate composer.json and composer.lock
-      run: composer validate
+      - name: Validate composer.json and composer.lock
+        run: composer validate
 
-    - name: Install dependencies
-      run: composer update --prefer-dist --no-progress ${{ matrix.composer }}
+      - name: Install dependencies
+        run: composer update --prefer-dist --no-progress ${{ matrix.composer }}
 
-    - name: Run PHPUnit
-      run: vendor/bin/phpunit ${{ matrix.coverage }}
+      - name: Run PHPUnit
+        run: vendor/bin/phpunit ${{ matrix.coverage }}
 
-    - name: Upload coverage to Scrutinizer
-      if: ${{ matrix.coverage }}
-      run: >
-        wget https://scrutinizer-ci.com/ocular.phar -O "/tmp/ocular.phar" &&
-        php "/tmp/ocular.phar" code-coverage:upload --format=php-clover /tmp/clover.xml
+      - name: Upload Scrutinizer coverage
+        uses: sudo-bot/action-scrutinizer@latest
+        if: ${{ matrix.coverage }}
+        with:
+          cli-args: "--format=php-clover build/logs/clover.xml --revision=${{ github.event.pull_request.head.sha || github.sha }}"
