--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
     },
     "require": {
         "php": ">=8.1",
-        "phpunit/phpunit": ">= 11.0, < 12.0"
+        "phpunit/phpunit": ">= 10.6, < 12.0"
     },
     "require-dev": {
         "squizlabs/php_codesniffer": "^3.5",
-        "phpstan/phpstan": ">= 1.0, < 2.0",
-        "phpstan/phpstan-strict-rules": ">= 1.0, < 2.0"
+        "phpstan/phpstan": ">= 1.12, < 2.0",
+        "phpstan/phpstan-strict-rules": ">= 1.6, < 2.0"
     },
     "autoload": {
         "psr-4": {
@@ -36,7 +36,7 @@
     "scripts": {
         "test": [
             "phpstan analyse",
-            "phpunit",
+            "XDEBUG_MODE=coverage phpunit --testdox --colors=always --coverage-text",
             "phpcs -p src"
         ]
     },
